# snowfall

./: .gitattributes  .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  TODO.md  justfile  setup.sh
.github/workflows/: ci.yml
config/git-hooks/: commit-msg
config/profiles/_default/: settings.json
config/profiles/ridley.grenwood.winters@gmail.com/: settings.json
deploy/ubuntu-inst/: Dockerfile  README.md  justfile
deploy/ubuntu-inst/scripts/: install_neovim.sh
doc/design/: snowfall.md
doc/design/overview/: .gitattributes  justfile  overview.html  overview.md
doc/dev/: generating_voxel_models.md
publish/ubuntu-inst/: justfile
publish/ubuntu-inst/scripts/: init.sh
source/: Cargo.toml
source/cmd/snowfall/: Cargo.toml
source/cmd/snowglobe/: Cargo.toml
source/cmd/snowtale/: Cargo.toml  justfile
source/cmd/snowtale/src/: main.rs  openai.rs  ui.rs
source/cmd/snowtale/store/_default/: player.yaml
source/cmd/snowtale/store/_default/rooms/: room-e000-n000.yaml  room-e001-n000.yaml  room-e002-n000.yaml  room-e003-n000.yaml  room-e004-n000.yaml  room-e004-n001.yaml  room-e004-n002.yaml  room-w001-n000.yaml
source/common/: Makefile.common  mprocs.yaml  webapp.justfile
source/crates/snowfall_bevy/: Cargo.toml
source/crates/snowfall_core/: Cargo.toml  README.MD
source/crates/snowfall_core/src/: error.rs  lib.rs  rng.rs  serialize_and_compress.rs
source/crates/snowfall_voxel/: Cargo.toml  README.MD  justfile
source/lib/raiment-core/: package.json
source/lib/raiment-ui/: package-lock.json  package.json
source/prototypes/guidebook-bucket-list/: .gitignore  Makefile  README.md  (+4 more)
source/scripts/: merge_vscode_settings.ts
source/tools/model_generator/: Cargo.toml  justfile
source/tools/model_generator/content/: tree_cluster-12.yaml  tree_cluster-222.yaml  tree_cluster-45.yaml  tree_cluster-67.yaml  tree_cluster-92.yaml  tree_cluster-922.yaml  tree_hill-31.yaml  tree_hill-311.yaml  tree_hill-3211.yaml  tree_hill-91.yaml
source/tools/model_generator/src/: main.rs
source/tools/voxel_viewer/: Cargo.toml  justfile
source/tools/voxel_viewer/content/: road-45.yaml
source/tools/voxel_viewer/src/: main.rs
tools/sea/: sea
(+128 files in other folders)
