[workspace]
members = [
    "source/cmd/snowfall",
    # Commands
    "source/cmd/snowglobe",
    # Crates
    "source/crates/snowfall_bevy",
    "source/crates/snowfall_core",
    "source/crates/snowfall_voxel",
    # Tools
    "source/tools/voxel_viewer",
    # Prototypes
    "source/prototypes/snowtale",
]
