[package]
name = "snowtale"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.1.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
