[package]
name = "snowfall_core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3.3"
flate2 = "1.0.35"
noise = "0.9.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.215", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
thiserror = "2.0.6"
