[package]
name = "model_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
snowfall_voxel = { path = "../../crates/snowfall_voxel" }
snowfall_core = { path = "../../crates/snowfall_core" }
clap = { version = "4.5.23", features = ["derive", "env"] }
serde_yaml = "0.9.34"
serde = { version = "1.0.216", features = ["derive"] }
bevy_math = { version = "0.15.0", features = ["serialize"] }
line_drawing = "1.0.0"
serde_json = "1.0.133"
