[package]
name = "voxel_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
snowfall_core = { path = "../../crates/snowfall_core" }
snowfall_voxel = { path = "../../crates/snowfall_voxel" }
snowfall_bevy = { path = "../../crates/snowfall_bevy" }
bevy = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
clap = { version = "4.5.23", features = ["derive", "string", "env"] }
pathfinding = "4.12.0"
